<resources>
    <string name="app_name">Финансовый калькулятор</string>

    <string name="title_main_menu">Калькулятор</string>
    <string name="button_deposit">Вклад</string>
    <string name="button_credit">Кредит</string>

    <string name="deposit_initial_sum_hint">Начальная сумма</string>
    <string name="deposit_interest_rate_hint">Процентная ставка</string>
    <string name="deposit_year_hint">Лет</string>
    <string name="deposit_month_hint">Месяцев</string>
    <string name="deposit_additional_sum_hint">Доп. вложения</string>
    <string name="deposit_capitalization">Капитализация</string>
    <string name="deposit_button_calculate">Посчитать</string>
    <string name="deposit_total_hint">Итого:</string>
    <string name="deposit_profit_hint">Прибыль:</string>
    <string name="deposit_additional_sum_total_hint">Сумма доп. вложений:</string>

    <string name="deposit_initial_sum">100000</string>
    <string name="deposit_interest_rate">7.75</string>
    <string name="deposit_year">5</string>
    <string name="deposit_month">0</string>
    <string name="deposit_additional_sum">0</string>

    <string name="credit_initial_sum_hint">Сумма кредита</string>
    <string name="credit_interest_rate_hint">Процентная ставка</string>
    <string name="credit_year_hint">Лет</string>
    <string name="credit_month_hint">Месяцев</string>
    <string name="credit_payment_type_annuity">Аннуитетный</string>
    <string name="credit_payment_type_differentiated">Дифференцированный</string>
    <string name="credit_button_calculate">Посчитать</string>
    <string name="credit_total_hint">Итого:</string>
    <string name="credit_interest_charge_hint">Плата за процент:</string>
    <string name="credit_monthly_installment_hint">Ежемесячный платеж:</string>

    <string name="credit_initial_sum">2000000</string>
    <string name="credit_interest_rate">12.50</string>
    <string name="credit_year">10</string>
    <string name="credit_month">0</string>
</resources>