<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepositActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deposit_initial_sum_hint"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginStart="4dp"/>

        <EditText
            android:id="@+id/textInitialSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deposit_interest_rate_hint"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginStart="4dp" />

        <EditText
            android:id="@+id/textInterestRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deposit_year_hint"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginStart="4dp" />

        <EditText
            android:id="@+id/textYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deposit_month_hint"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginStart="4dp" />

        <EditText
            android:id="@+id/textMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/checkBoxCapitalization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deposit_capitalization" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deposit_additional_sum_hint"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginStart="4dp" />

        <EditText
            android:id="@+id/textAdditionalSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonCalculateDeposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickCalculateDeposit"
        android:text="@string/deposit_button_calculate"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</android.support.constraint.ConstraintLayout>