<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditActivity">

    <LinearLayout
        android:id="@+id/linearLayoutCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_initial_sum_hint"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginStart="4dp" />

        <EditText
            android:id="@+id/textInitialSumCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_interest_rate_hint"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginStart="4dp"/>

        <EditText
            android:id="@+id/textInterestRateCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/credit_year_hint"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toTopOf="@+id/textYearCredit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/textYearCredit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/credit_month_hint"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toTopOf="@+id/textMonthCredit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/textMonthCredit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <ToggleButton
            android:id="@+id/CreditTypePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D1C4E9"
            android:checked="true"
            android:textOff="@string/credit_payment_type_differentiated"
            android:textOn="@string/credit_payment_type_annuity" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonCalculateCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickCalculateCredit"
        android:text="@string/credit_button_calculate"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutCredit"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCredit"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCredit" />
</android.support.constraint.ConstraintLayout>